@@ -56,10 +56,7 @@ function getContextFromRequest (req, conf, type) {
   }
 
   if (conf.captureHeaders) {
-    context.headers = redactKeysFromObject(
-      Object.assign({}, req.headers),
-      conf.sanitizeFieldNamesRegExp
-    )
+    context.headers = redactKeysFromObject(req.headers, conf.sanitizeFieldNamesRegExp)
 
     // TODO: remove filterHttpHeaders option in next major release
     // https://github.com/elastic/apm-agent-nodejs/issues/3332
@@ -102,6 +99,25 @@ function getContextFromRequest (req, conf, type) {
   return context
 }
 
+/**
+ * Extract appropriate `{transaction,error}.context.response` from an HTTP
+ * response object. This handles header redaction according to the agent config.
+ *
+ * @param {Object} res - Typically `res` is a Node.js `http.OutgoingMessage`
+ *    (https://nodejs.org/api/http.html#class-httpoutgoingmessage).
+ *    However, some cases (e.g. Lambda and Azure Functions instrumentation)
+ *    create a pseudo-res object that matches well enough for this function.
+ *    Some relevant fields: (TODO: document all used fields)
+ *    - `headers` - Required. An object.
+ *    - `statusCode` - Required. A number.
+ *    - `headersSent` - Boolean indicating if the headers have been sent
+ *       (https://nodejs.org/api/http.html#outgoingmessageheaderssent)
+ *    - `finished` - Boolean indicating if `response.end()` has been called
+ *       (https://nodejs.org/api/http.html#responsefinished)
+ * @param {Object} conf - The full agent configuration.
+ * @param {Boolean} isError - Indicates if this response contains an error and
+ *    some extar fields should be added to the context
+ */
 function getContextFromResponse (res, conf, isError) {
   var context = {
     status_code: res.statusCode,
